syntax = "proto3";

package ADL.Mempool.Proto;
import "google/protobuf/timestamp.proto";

message Tx {
    string addressSource = 1;
    string addressDest = 2;
    string signature = 3;
    double amount = 4;
    google.protobuf.Timestamp updated = 5;
}

message Key {
    string hashed_signature = 1;
}